Estudos/ingress/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app1
  name: app1
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: app1
  template:
    metadata:
      labels:
        run: app1
    spec:
      containers:
      - image: dockersamples/static-site
        imagePullPolicy: Always
        name: app1
        ports:
        - containerPort: 80
          protocol: TCP
