Estudos/ingress/app-ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-taget: /
  name: app-ingress
spec:
  rules:
  - host: k8s01.sulinfra.com.br
    http:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /app1
      - backend:
          serviceName: appsvc2
          servicePort: 80
        path: /app2
